# mobileFinal

./: README.md  conftest.py  pyproject.toml
assist/: attach.py
mobile_tests/: first_test.py
qa_mobile_19/: first_test.py
tests/: test_wikipedia.py
wikipedia_mobile/model/: app.py
