[tool.poetry]
name = "qa-mobile-19"
version = "0.1.0"
description = ""
authors = ["Shrimp-pixel <aleksander.17047665@gmail.com>"]
readme = "README.md"
packages = [{include = "qa_mobile_19"}]

[tool.poetry.dependencies]
python = "^3.11"
selene = {version = "^2.0.0-beta.8", allow-prereleases = true}
Appium-Python-Client = "^2.7.1"
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
allure-pytest = "^2.12.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
